--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
                     <a href="script.html">
                         <button type='button'>SCRIPT</button>
                     </a>
+                    <a href="https://discord.gg/37AcKBhB7f">
+                        <button type='button'>DISCORD</button>*
+                    </a>
                 </ul>
             </div>
             <div class="content">
