--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<meta content="MoonLight 1.0" property="og:title" />
+<meta content="Tired of skill issues in bedwars? Get MoonLight now!" property="og:description" />
+<meta content="#43B581" data-react-helmet="true" name="theme-color" />
 <html>
     <head>
         <title>MoonLight</title>
