--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<meta content="MoonLight 1.0" property="og:title" />
+<meta content="MoonLight" property="og:title" />
 <meta content="Tired of skill issues in bedwars? Get MoonLight now!" property="og:description" />
 <meta content="#43B581" data-react-helmet="true" name="theme-color" />
 <html>
