--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </ul>
             </div>
             <div class="content">
-                <h1>MoonLight 1.0</h1>
+                <h1>MoonLight</h1>
                 <p>Simple solution to remove skill issues!</p>
             </div>
         </div>
